feat: init Select

--- a/src/shared/ui/ExpandIcon/ExpandIcon.module.css
+++ b/src/shared/ui/ExpandIcon/ExpandIcon.module.css
@@ -1,6 +1,5 @@
 .ExpandIcon {
-    transition: transform 100ms;
-    stroke: #ABAFB2;
+    fill: #999FA6;
 }
 
 .ExpandIcon_expandedDirection_right.ExpandIcon_isExpanded {
