--- a/src/shared/ui/Select/SelectEmpty/SelectEmpty.module.css
+++ b/src/shared/ui/Select/SelectEmpty/SelectEmpty.module.css
@@ -2,5 +2,5 @@
     width: 100%;
     text-align: center;
     padding: 7px 5px;
-    color: var(--portal-grey);
+    color: var(--help-text-color);
 }
