--- a/src/shared/ui/Input/Input.module.css
+++ b/src/shared/ui/Input/Input.module.css
@@ -1,46 +1,50 @@
 .Input {
-    outline-offset: -2px;
-    font: var(--font-default);
-    max-width: 100%;
     width: 100%;
-    padding: 12px 16px;
+    padding: 12px;
     resize: none;
-    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-    border: 1px solid var(--border-on-surface-color);
-    border-radius: var(--border-radius-m);
-    outline: 1px solid transparent;
-    box-sizing: border-box;
+    transition: border-color 0.15s ease-in-out;
+    border: 1px solid var(--border-color);
+    border-radius: var(--border-radius);
+    display: flex;
+    align-items: center;
+    gap: 8px;
 }
 
-.Input_invalid {
-    border-color: var(--danger-color);
+.Input__input {
+    line-height: 16px;
+    border: none;
+    outline: none;
 }
 
-.Input:hover,
-.Input:focus {
+.Input:hover {
+    border-color: var(--hover-border-color);
+}
+
+.Input:has(> .Input__input:focus) {
     border-color: var(--primary-color);
 }
 
-.Input:focus {
-    outline-color: var(--primary-color);
-}
-
-.Input:disabled {
+.Input:has(> .Input__input:disabled) {
     pointer-events: none;
-    background-color: var(--surface-color);
-    color: var(--secondary-text-color);
+    background-color: var(--border-color);
+    color: var(--help-text-color);
 }
 
-.Input[type="number"]::-webkit-outer-spin-button,
-.Input[type="number"]::-webkit-inner-spin-button {
+.Input_invalid,
+.Input_invalid:hover {
+    border-color: var(--error-color);
+}
+
+.Input__input[type="number"]::-webkit-outer-spin-button,
+.Input__input[type="number"]::-webkit-inner-spin-button {
     appearance: none;
     margin: 0;
 }
 
-.Input[type="number"] {
+.Input__input[type="number"] {
     appearance: textfield;
 }
 
-.Input::placeholder {
-    color: var(--secondary-text-color)
+.Input__input::placeholder {
+    color: var(--help-text-color);
 }
