--- a/src/shared/ui/Select/Label/Label.module.css
+++ b/src/shared/ui/Select/Label/Label.module.css
@@ -1,5 +1,4 @@
 .Label {
-    min-height: 28px;
     width: 100%;
     display: grid;
     grid-template:
@@ -16,10 +15,10 @@
 
 .Label__expandIcon {
     padding: 5px;
-    width: var(--icon-size);
-    height: var(--icon-size);
+    width: var(--icons-size-m);
+    height: var(--icons-size-m);
     box-sizing: unset;
-    fill: var(--secondary-text-color);
+    fill: #999FA6;
     grid-column: 3;
     grid-row: 1 / 5;
 }
@@ -27,5 +26,5 @@
 .Label__badgesContainer {
     max-height: 86px;
     overflow: auto;
-    padding-top: calc(var(--font-size-m) + var(--space-s) * 2)
+    padding-top: calc(var(--body-font-size) + var(--space-s) * 2)
 }
