--- a/src/pages/movie/MoviesPage/MoviesPage.module.css
+++ b/src/pages/movie/MoviesPage/MoviesPage.module.css
@@ -1,4 +1,51 @@
 .MoviesPage {
-    width: 100vw;
+    width: 100%;
     min-height: 100vh;
+    height: 100%;
+    background-color: var(--background-color);
+}
+
+.MoviesPage__content {
+    width: 100%;
+    padding: 20px 32px;
+}
+
+.MoviesPage__filters {
+    flex-basis: 400px;
+    max-width: 400px;
+    width: 100%;
+    flex-shrink: 0;
+}
+
+.MoviesPage__card {
+    flex: 1;
+    width: 100%;
+}
+
+.MoviesPage__cards {
+    width: 100%;
+    flex: 1;
+}
+
+.MoviesPage__search {
+    width: 100%;
+    max-width: 400px;
+    flex: 1;
+}
+
+.MoviesPage__filters {
+    background-color: #fff;
+    border-radius: var(--border-radius);
+    padding: var(--space-l);
+}
+
+.MoviesPage__filter {
+    width: 100%;
+}
+
+.MoviesPage__filtersTitle {
+    font-weight: var(--font-weight-semibold);
+    font-size: var(--subheader-font-size);
+    line-height: var(--subheader-line-height);
+    margin-bottom: 4px;
 }
