--- a/src/shared/styles/index.css
+++ b/src/shared/styles/index.css
@@ -13,7 +13,8 @@ body, #root {
     width: 100vw;
     min-height: 100vh;
     height: 100%;
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 
 a {
