--- a/src/shared/ui/Button/Button.module.css
+++ b/src/shared/ui/Button/Button.module.css
@@ -37,7 +37,7 @@
     color: #fff;
 }
 
-.Button_variant_bordered:not(:hover) {
+.Button.Button_variant_bordered {
     background-color: transparent;
 }
 
