--- a/src/entities/user/ui/User/User.module.css
+++ b/src/entities/user/ui/User/User.module.css
@@ -1,3 +1,15 @@
 .User {
+    width: 40px;
+    height: 40px;
+    background-color: #fff;
+    border-radius: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
+.User__icon {
+    width: 24px;
+    height: 24px;
+    fill: var(--text-color);
 }
