--- a/src/features/login/ui/Login/Login.module.css
+++ b/src/features/login/ui/Login/Login.module.css
@@ -1,3 +1,16 @@
 .Login {
+    max-width: 344px;
+}
 
+.Login__form {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    gap: var(--space-l);
+}
+
+.Login__title {
+    font-size: var(--header-3-font-size);
+    line-height: var(--header-3-font-size);
+    font-weight: var(--font-weight-semibold);
 }
