--- a/src/pages/movie/MoviesPage/MoviesPage.module.css
+++ b/src/pages/movie/MoviesPage/MoviesPage.module.css
@@ -2,11 +2,15 @@
     width: 100%;
     min-height: 100vh;
     height: 100%;
+    display: flex;
+    flex-direction: column;
     background-color: var(--background-color);
 }
 
 .MoviesPage__content {
     width: 100%;
+    flex: 1;
+    height: 100%;
     padding: 20px 32px;
 }
 
@@ -15,6 +19,7 @@
     max-width: 400px;
     width: 100%;
     flex-shrink: 0;
+    align-self: start;
 }
 
 .MoviesPage__card {
@@ -25,12 +30,12 @@
 .MoviesPage__cards {
     width: 100%;
     flex: 1;
+    align-self: start;
 }
 
 .MoviesPage__search {
     width: 100%;
     max-width: 400px;
-    flex: 1;
 }
 
 .MoviesPage__filters {
