--- a/src/shared/ui/Loader/CircleLoader/CircleLoader.module.css
+++ b/src/shared/ui/Loader/CircleLoader/CircleLoader.module.css
@@ -1,36 +1,19 @@
 .CircleLoader {
-    display: inline-block;
-    position: relative;
+    --d:22px;
+    width: 4px;
+    height: 4px;
+    border-radius: 100%;
+    color: #999FA6;
+    box-shadow:
+            calc(1*var(--d))      calc(0*var(--d))     0 0,
+            calc(0.707*var(--d))  calc(0.707*var(--d)) 0 1px,
+            calc(0*var(--d))      calc(1*var(--d))     0 2px,
+            calc(-0.707*var(--d)) calc(0.707*var(--d)) 0 3px,
+            calc(-1*var(--d))     calc(0*var(--d))     0 4px,
+            calc(-0.707*var(--d)) calc(-0.707*var(--d))0 5px,
+            calc(0*var(--d))      calc(-1*var(--d))    0 6px;
+    animation: l27 1s infinite steps(8);
 }
-
-.CircleLoader__item {
-    box-sizing: border-box;
-    display: block;
-    position: absolute;
-    border-style: solid;
-    border-radius: 50%;
-    animation: spinnerAnimation 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
-    border-color: var(--primary-color) transparent transparent transparent;
-}
-
-.CircleLoader__item:nth-child(1) {
-    animation-delay: -0.45s;
-}
-
-.CircleLoader__item:nth-child(2) {
-    animation-delay: -0.3s;
-}
-
-.CircleLoader__item:nth-child(3) {
-    animation-delay: -0.15s;
-}
-
-@keyframes spinnerAnimation {
-    0% {
-        transform: rotate(0deg);
-    }
-
-    100% {
-        transform: rotate(360deg);
-    }
+@keyframes l27 {
+    100% {transform: rotate(1turn)}
 }
