--- a/src/shared/ui/Modal/Modal.module.css
+++ b/src/shared/ui/Modal/Modal.module.css
@@ -15,16 +15,19 @@
     position: absolute;
     top: var(--space-l);
     right: var(--space-l);
+    border: none;
+    outline: none;
+    background-color: transparent;
 }
 
 .Modal__closeButtonIcon {
     width: 18px;
     height: 18px;
-    fill: var(--secondary-text-color)
+    fill: var(--help-text-color)
 }
 
 .Modal__closeButton:hover .Modal__closeButtonIcon {
-    fill: var(--on-surface-color)
+    fill: var(--primary-color)
 }
 
 .Modal__overlay_isOpen {
@@ -33,8 +36,9 @@
 }
 
 .Modal {
-    background-color: var(--on-surface-color);
-    border-radius: 40px;
+    background-color: #fff;
+    border-radius: var(--border-radius);
+    padding: var(--space-l);
     width: 100%;
     position: relative;
     margin: auto 0;
