--- a/src/shared/styles/variables.css
+++ b/src/shared/styles/variables.css
@@ -40,7 +40,8 @@
 
     /* Z-indexes */
     --z-index-dropdown: 10;
-    --z-index-modal: calc(var(--z-index-dropdown) + 1);
+    --z-index-header: calc(var(--z-index-dropdown) + 1);
+    --z-index-modal: calc(var(--z-index-header) + 1);
     --z-index-toast: calc(var(--z-index-modal) + 1);
 
     /* Icon sizes */
