--- a/src/shared/styles/index.css
+++ b/src/shared/styles/index.css
@@ -9,12 +9,20 @@
     line-height: var(--body-line-height);
 }
 
-body, #root {
+body {
     width: 100vw;
-    min-height: 100vh;
-    height: 100%;
+    height: 100vh;
+    overflow: hidden;
+    background-color: var(--background-color);
+}
+
+#root {
     overflow-x: hidden;
     overflow-y: auto;
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 a {
