--- a/src/shared/ui/Loader/CircleLoader/CircleLoader.module.css
+++ b/src/shared/ui/Loader/CircleLoader/CircleLoader.module.css
@@ -1,5 +1,6 @@
 .CircleLoader {
     --d:22px;
+
     width: 4px;
     height: 4px;
     border-radius: 100%;
@@ -12,8 +13,9 @@
             calc(-1*var(--d))     calc(0*var(--d))     0 4px,
             calc(-0.707*var(--d)) calc(-0.707*var(--d))0 5px,
             calc(0*var(--d))      calc(-1*var(--d))    0 6px;
-    animation: l27 1s infinite steps(8);
+    animation: rotate 1s infinite steps(8);
 }
-@keyframes l27 {
+
+@keyframes rotate {
     100% {transform: rotate(1turn)}
 }
