--- a/src/shared/ui/Separator/Separator.module.css
+++ b/src/shared/ui/Separator/Separator.module.css
@@ -2,37 +2,32 @@
     display: flex;
     align-items: center;
     flex-direction: row;
-
     width: 100%;
-
     text-align: center;
     white-space: nowrap;
     color: #939DAA;
-
     cursor: default;
 }
 
-.Separator_orientation_horizontal:not(:empty):after {
+.Separator_orientation_horizontal:not(:empty)::after {
     margin-left: var(--space-s);
 }
 
-.Separator_orientation_horizontal:not(:empty):before {
+.Separator_orientation_horizontal:not(:empty)::before {
     margin-right: var(--space-s);
 }
 
-.Separator_orientation_horizontal:empty:after,
-.Separator_orientation_horizontal:empty:before {
+.Separator_orientation_horizontal:empty::after,
+.Separator_orientation_horizontal:empty::before {
     margin-top: var(--space-s);
     margin-bottom: var(--space-s);
 }
 
-.Separator_orientation_horizontal:after,
-.Separator_orientation_horizontal:before {
+.Separator_orientation_horizontal::after,
+.Separator_orientation_horizontal::before {
     display: block;
     content: "";
-
-    background-color: var(--active-color);
-
+    background-color: var(--help-text-color);
     width: 50%;
     height: 1px;
 }
@@ -40,5 +35,5 @@
 .Separator_orientation_vertical {
     height: 100%;
     width: 1px;
-    background-color: var(--active-color);
+    background-color: var(--help-text-color);
 }
