--- a/src/shared/styles/index.css
+++ b/src/shared/styles/index.css
@@ -17,8 +17,7 @@ body {
 }
 
 #root {
-    overflow-x: hidden;
-    overflow-y: auto;
+    overflow: hidden auto;
     height: 100vh;
     width: 100%;
     display: flex;
