--- a/src/shared/styles/variables.css
+++ b/src/shared/styles/variables.css
@@ -25,7 +25,7 @@
     --space-xxxl: 64px;
 
     /* Colors */
-    --primary-color: #FF5500;
+    --primary-color: #F50;
     --hover-primary-color: #E94E00;
     --border-color: #E1E3E6;
     --hover-border-color: #CED2D6;
@@ -53,7 +53,6 @@
     --disabled-opacity: 0.6;
     --sidebar-width: 230px;
     --collapsed-sidebar-width: 60px;
-    --box-shadow: 0 1px 1px rgba(0, 0, 0, 14%), 0 2px 1px -1px rgba(0, 0, 0, 12%), 0 1px 3px rgba(0, 0, 0, 20%);
-
+    --box-shadow: 0 1px 1px rgb(0 0 0 / 14%), 0 2px 1px -1px rgb(0 0 0 / 12%), 0 1px 3px rgb(0 0 0 / 20%);
     --actors-length: 0;
 }
