--- a/src/shared/ui/Modal/Modal.module.css
+++ b/src/shared/ui/Modal/Modal.module.css
@@ -2,7 +2,7 @@
     position: fixed;
     inset: 0;
     visibility: hidden;
-    background-color: rgba(0,0,0, var(--disabled-opacity));
+    background-color: rgb(0 0 0 / var(--disabled-opacity));
     padding: var(--space-xxxl);
     overflow: auto;
     display: flex;
